force-app/src/objects/TR1__Skills__c.object
<CustomObject>
    <fields>
        <fullName>TR1__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contact Skills</relationshipLabel>
        <relationshipName>Skills</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TR1__DurationMonths__c</fullName>
        <label>Duration (Months)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__DurationYears__c</fullName>
        <label>Duration (Years)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TR1__Duration__c</fullName>
        <description>Full duration in months.</description>
        <label>Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TR1__Duration_for_Job_Skill__c</fullName>
        <label>Duration for Job Skill</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1..11</fullName>
                    <label>less than 1 Year</label>
                </value>
                <value>
                    <fullName>1..3</fullName>
                    <label>1-3 Years</label>
                </value>
                <value>
                    <fullName>3..5</fullName>
                    <label>3-5 Years</label>
                </value>
                <value>
                    <fullName>5..10</fullName>
                    <label>5-10 Years</label>
                </value>
                <value>
                    <fullName>&gt;=10</fullName>
                    <label>10+ Years</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__Duration_in_Months__c</fullName>
        <label>Duration in Months</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TR1__Duration_in_years__c</fullName>
        <formula>ROUND(( TR1__Duration__c /12),0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Duration in years</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TR1__End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TR1__Expiration_Date__c</fullName>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TR1__Extracted_Skill_Name__c</fullName>
        <label>Extracted Skill Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__IsNormalised__c</fullName>
        <label>IsNormalised</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Y</fullName>
                    <default>true</default>
                    <label>True</label>
                </value>
                <value>
                    <fullName>N</fullName>
                    <label>False</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__Is_Last_Job_Title__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To store the value parsed from TK (LastPosition property).</description>
        <inlineHelpText>Defines if the Job Title is the last profession for the candidate (LastPosition property on TK). Only one skill of Type job_title can be marked as true by candidate.</inlineHelpText>
        <label>Is Last Job Title</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__Is_Recent_Job_Title__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To store the value parsed from TK (RecentPosition property).</description>
        <inlineHelpText>Defines if the candidate has worked in the profession recently (RecentPosition property on TK).</inlineHelpText>
        <label>Is Recent Job Title</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__Job__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Job</label>
        <referenceTo>TR1__Job__c</referenceTo>
        <relationshipLabel>Job Skills</relationshipLabel>
        <relationshipName>Skills</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TR1__Level__c</fullName>
        <label>Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__Master_Skill_Name__c</fullName>
        <formula>TR1__Master_Skill__r.TR1__Master_Skill_Name__c</formula>
        <label>Master Skill Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Master_Skill__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Master Skill</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>TR1__Master_Skill__c.TR1__Status__c</field>
                <operation>equals</operation>
                <value>Active</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>TR1__Master_Skill__c</referenceTo>
        <relationshipLabel>Master Skills</relationshipLabel>
        <relationshipName>Skills</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TR1__Sector__c</fullName>
        <label>Sector</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Energy and utilities</fullName>
                </value>
                <value>
                    <fullName>Banking</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__SkillExtID__c</fullName>
        <formula>TR1__Skill_Code__c &amp;&apos;:&apos;&amp; TR1__Extracted_Skill_Name__c</formula>
        <label>Skill Ext ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Skill_Code__c</fullName>
        <formula>TR1__Master_Skill__r.TR1__Skill_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Skill Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Source__c</fullName>
        <label>Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Parser</fullName>
                </value>
                <value>
                    <fullName>System</fullName>
                </value>
                <value>
                    <fullName>Candidate</fullName>
                </value>
                <value>
                    <fullName>Client</fullName>
                </value>
                <value>
                    <fullName>LinkedIn</fullName>
                </value>
                <value>
                    <fullName>Manual</fullName>
                    <default>true</default>
                    <label>Manual</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TR1__Type__c</fullName>
        <formula>TEXT(TR1__Master_Skill__r.TR1__Type__c)</formula>
        <label>Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Verified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Verified</label>
        <type>Checkbox</type>
    </fields>
    <label>Skill</label>
    <nameField>
        <displayFormat>S-{0000000000}</displayFormat>
        <label>Skill Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Skills</pluralLabel>
    <recordTypes>
        <fullName>TR1__Certifications</fullName>
        <active>true</active>
        <description>RecordType for Skill Type Certifications</description>
        <label>Certifications</label>
    </recordTypes>
    <recordTypes>
        <fullName>TR1__Competencies</fullName>
        <active>true</active>
        <description>RecordType for Skill Type Competencies</description>
        <label>Competencies</label>
    </recordTypes>
    <recordTypes>
        <fullName>TR1__IT</fullName>
        <active>true</active>
        <description>RecordType for Skill Type IT</description>
        <label>IT</label>
    </recordTypes>
    <recordTypes>
        <fullName>TR1__Job_Certifications</fullName>
        <active>true</active>
        <description>Record Type for Job Skills of type Certifications</description>
        <label>Job Certifications</label>
    </recordTypes>
    <recordTypes>
        <fullName>TR1__Job_Competencies</fullName>
        <active>true</active>
        <description>Record Type for Job Skills of type Competencies</description>
        <label>Job Competencies</label>
    </recordTypes>
    <recordTypes>
        <fullName>TR1__Job_IT</fullName>
        <active>true</active>
        <description>Record Type for Job Skills of type IT</description>
        <label>Job IT</label>
    </recordTypes>
    <recordTypes>
        <fullName>TR1__Job_Language</fullName>
        <active>true</active>
        <description>Record Type for Job Skills of type Language</description>
        <label>Job Language</label>
    </recordTypes>
    <recordTypes>
        <fullName>TR1__Job_Professional</fullName>
        <active>true</active>
        <description>Record Type for Job Skills of type Professional</description>
        <label>Job Professional</label>
    </recordTypes>
    <recordTypes>
        <fullName>TR1__Language</fullName>
        <active>true</active>
        <description>RecordType for Skill Type Language</description>
        <label>Language</label>
    </recordTypes>
    <recordTypes>
        <fullName>TR1__Professional</fullName>
        <active>true</active>
        <description>RecordType for Skill Type Professional</description>
        <label>Professional</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>TR1__Allow_Active_Master_Skill</fullName>
        <active>true</active>
        <errorConditionFormula>AND ( OR ( AND(ISNEW(),NOT(ISBLANK(TR1__Master_Skill__c))), ISCHANGED(TR1__Master_Skill__c) ), NOT ISPICKVAL(TR1__Master_Skill__r.TR1__Status__c, &quot;Active&quot;) )</errorConditionFormula>
        <errorDisplayField>TR1__Master_Skill__c</errorDisplayField>
        <errorMessage>Inactive skills cannot be selected in the master skill field. Please select an active master skill</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TR1__DurationYearsLessThanZero</fullName>
        <active>true</active>
        <errorConditionFormula>TR1__DurationYears__c &lt; 0</errorConditionFormula>
        <errorDisplayField>TR1__DurationYears__c</errorDisplayField>
        <errorMessage>Duration (Years) cannot be less than 0</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TR1__End_date_greater_than_Start_date</fullName>
        <active>true</active>
        <errorConditionFormula>TR1__End_Date__c &lt; TR1__Start_Date__c</errorConditionFormula>
        <errorMessage>End date should be greater than or equal to Start date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TR1__Expiration_date_greater_than_start_date</fullName>
        <active>true</active>
        <errorConditionFormula>TR1__Expiration_Date__c &lt;  TR1__Start_Date__c</errorConditionFormula>
        <errorMessage>Expiration date should be greater than or equal to Start Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TR1__NotManualSkillWithEndGreaterStartDate</fullName>
        <active>false</active>
        <description>The end date should be greater than or equal to the start date and should not be a &apos;Manual&apos; source type.</description>
        <errorConditionFormula>AND(
 (TR1__End_Date__c  &lt; TR1__Start_Date__c ),
 (ISPICKVAL(TR1__Source__c, &apos;Manual&apos;))
)</errorConditionFormula>
        <errorMessage>The end date should be greater than or equal to the start date and should not be a &apos;Manual&apos; source type.</errorMessage>
    </validationRules>
</CustomObject>